--- a/Mystic Square/Base.lproj/Main.storyboard
+++ b/Mystic Square/Base.lproj/Main.storyboard
@@ -20,13 +20,13 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Acr-OF-Sxh" customClass="PuzzleBoardView">
                                 <rect key="frame" x="14" y="13" width="573" height="573"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.93434343434343436" green="0.46368177306184599" blue="0.20643223781594686" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Acr-OF-Sxh" secondAttribute="height" multiplier="1:1" id="79e-Dy-hnE"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="0.48464146346784776" blue="0.09348486306057513" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerY" secondItem="Acr-OF-Sxh" secondAttribute="centerY" constant="0.5" id="2cL-UJ-Sex"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Acr-OF-Sxh" secondAttribute="trailing" constant="-3" id="ZSs-vJ-4fb"/>
