--- a/Mystic Square/Base.lproj/Main.storyboard
+++ b/Mystic Square/Base.lproj/Main.storyboard
@@ -18,19 +18,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sGc-11-Hkq">
+                                <rect key="frame" x="10" y="34" width="67" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="67" id="Uqd-Fv-2Mk"/>
+                                    <constraint firstAttribute="height" constant="30" id="wVZ-qv-Gme"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="25"/>
+                                <state key="normal" title="Reset">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SQG-wm-TfW"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gKb-KZ-CvW">
+                                <rect key="frame" x="530" y="34" width="60" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="RYw-6W-naW"/>
+                                    <constraint firstAttribute="height" constant="30" id="y83-M8-7Xo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="25"/>
+                                <state key="normal" title="Undo">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="undo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ad9-Vp-haq"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Acr-OF-Sxh" customClass="PuzzleBoardView">
                                 <rect key="frame" x="14" y="13" width="573" height="573"/>
-                                <color key="backgroundColor" red="0.93434343434343436" green="0.46368177306184599" blue="0.20643223781594686" alpha="0.0" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="Acr-OF-Sxh" secondAttribute="height" multiplier="1:1" id="79e-Dy-hnE"/>
+                                    <constraint firstAttribute="width" secondItem="Acr-OF-Sxh" secondAttribute="height" multiplier="1:1" id="Fh4-Ww-hMN"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.48464146346784776" blue="0.09348486306057513" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="Acr-OF-Sxh" secondAttribute="centerY" constant="0.5" id="2cL-UJ-Sex"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Acr-OF-Sxh" secondAttribute="trailing" constant="-3" id="ZSs-vJ-4fb"/>
-                            <constraint firstItem="Acr-OF-Sxh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-2" id="sIo-VB-tqd"/>
+                            <constraint firstItem="gKb-KZ-CvW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="14" id="9aW-T2-LtH"/>
+                            <constraint firstAttribute="centerX" secondItem="Acr-OF-Sxh" secondAttribute="centerX" constant="-0.5" id="Kj5-eU-v5A"/>
+                            <constraint firstAttribute="centerY" secondItem="Acr-OF-Sxh" secondAttribute="centerY" constant="0.5" id="Lix-Wr-7CT"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Acr-OF-Sxh" secondAttribute="trailing" constant="-3" id="Oxz-37-LAE"/>
+                            <constraint firstItem="sGc-11-Hkq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="14" id="ZXZ-bI-0wU"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gKb-KZ-CvW" secondAttribute="trailing" constant="-6" id="fos-Ig-alU"/>
+                            <constraint firstItem="Acr-OF-Sxh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-2" id="h8U-Fr-njw"/>
+                            <constraint firstItem="sGc-11-Hkq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-6" id="wuS-XA-S7t"/>
                         </constraints>
                     </view>
                     <connections>
@@ -39,7 +74,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="261" y="334"/>
+            <point key="canvasLocation" x="261" y="333"/>
         </scene>
     </scenes>
 </document>
